--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <link rel="stylesheet" href="/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>FBI Files - "Dallas"</title>
 </head>
 <body>
-    <div class = "header">
+    <!-- <div class = "header">
         <h2>FBI-Files/Clown-Case/"Dallas"</h2>
-    </div>
+    </div> -->
     <div class = "DallasInfo">
         <div class="DallasLeft">
             <h1>"Dallas"</h1>
@@ -54,18 +55,37 @@
                 </table>
         </div>
 
-        <p><b>"DALLAS"</b> ( presumed to be operating under the alias <em>"NATHAN STEELE"</em> ) serves as the gang's effective leader, second only to their ringleader, <b>"BAIN"</b>. A former member of the Chicago mob, <b>"DALLAS"</b> is extremely cunning and experienced, leaving with a target on his head after attempting to turn two mob families against each other. After living life on the run as an unliscensed physician, Steele remerged from the criminal underworld as one of the four original members of the <b>PAYDAY</b> crew.</p>
-
         <p>Do not let his age and cartoonish mask fool you. Steele is evidently a hardened criminal with experience enough to rival men of the military. His greatest threat, however, isn't his firearms expertise, but rather his cunning wit and leadership. The gang's Mastermind and Crew Chief, Steele is the one organizing the team to deal with assault waves and making sure plans are executed.</p>
 
+            <div class="DallasLists">
+                <div class="listLeft">
+                    <h3>Known Associates</h3>
+                    <li>
+                        <ul>James "Hoxton" Hoxworth</ul>
+                        <ul>"Wolf"</ul>
+                        <ul>"Chains" (Possibly "Nicolas")</ul>
+                        <ul>"Bain"</ul>
+                        <ul><s>Matt Roscoe</s></ul>
+                    </li>
+                </div>
+                <div class="listRight">
+                    <h3>Notable Crimes</h3>
+                    <li>
+                        <ul>Robbery of First World Bank</ul>
+                        <ul>Prison Break</ul>
+                        <ul>Fraudulent Acess of IRS Financial Servers</ul>
+                        <ul>Robbery of Garnet Group's Personal Fortune</ul>
+                        <ul>Manufacture of Conterfeit Currency</ul>
+                    </li>
+                </div>
+            </div>
         </div>
         <div class="DallasRight">
             <img src="media/images/PD2_Dallas.png">
+            <h3><em>"I NEED A MEDIC BAG!!!!"</em> - "Nathan 'Dallas' Steele"</h3>
+            <p><b>"DALLAS"</b> ( presumed to be operating under the alias <em>"NATHAN STEELE"</em> ) serves as the gang's effective leader, second only to their ringleader, <b>"BAIN"</b>. A former member of the Chicago mob, <b>"DALLAS"</b> is extremely cunning and experienced, leaving with a target on his head after attempting to turn two mob families against each other. After living life on the run as an unliscensed physician, Steele remerged from the criminal underworld as one of the four original members of the <b>PAYDAY</b> crew.</p>
         </div>
     </div>
     
 </body>
-<footer>
-
-</footer>
 </html>
