Added FBI Favicon, edited title tag to seem more legit.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <link rel="stylesheet" href="/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>FBI Files - "Dallas"</title>
+    <link rel="icon" type="image/x-icon" href="media/images/fbi-favicon.svg">
+    <title>FBI DATABASE - "DALLAS"</title>
 </head>
 <body>
     <!-- <div class = "header">
