--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="icon" type="image/x-icon" href="media/images/fbi-favicon.svg">
     <title>FBI DATABASE - "DALLAS"</title>
+
+    <!-- Taken from this thread: https://discourse.webflow.com/t/how-to-get-rid-of-white-bar-at-the-bottom-of-the-web/73945/3 -->
+    <!-- Stops white band at bottom if any weird padding issues arise  -->
+    <style> html, body { height: 100%; width: 100%; overflow: auto; } </style>
 </head>
 <body>
     <!-- <div class = "header">
@@ -56,7 +60,7 @@
                 </table>
         </div>
 
-        <p>Do not let his age and cartoonish mask fool you. Steele is evidently a hardened criminal with experience enough to rival men of the military. His greatest threat, however, isn't his firearms expertise, but rather his cunning wit and leadership. The gang's Mastermind and Crew Chief, Steele is the one organizing the team to deal with assault waves and making sure plans are executed.</p>
+        <p>Do not let his age and cartoonish mask fool you. Steele is evidently a hardened criminal with experience enough to rival men of the military. His greatest threat, however, isn't his firearms expertise, but rather his cunning wit and leadership. The gang's Mastermind and Crew Chief, Steele is the one organizing the team to deal with assault waves and orchestrating plans and escapes.</p>
 
             <div class="DallasLists">
                 <div class="listLeft">
@@ -82,9 +86,12 @@
             </div>
         </div>
         <div class="DallasRight">
-            <img src="media/images/PD2_Dallas.png">
-            <h3><em>"I NEED A MEDIC BAG!!!!"</em> - "Nathan 'Dallas' Steele"</h3>
+            <div class="DallasImg">
+                <img src="media/images/PD2_Dallas.png">
+                <h3><em>"I NEED A MEDIC BAG!!!!"</em> - "Nathan 'Dallas' Steele"</h3>
+            </div>
             <p><b>"DALLAS"</b> ( presumed to be operating under the alias <em>"NATHAN STEELE"</em> ) serves as the gang's effective leader, second only to their ringleader, <b>"BAIN"</b>. A former member of the Chicago mob, <b>"DALLAS"</b> is extremely cunning and experienced, leaving with a target on his head after attempting to turn two mob families against each other. After living life on the run as an unliscensed physician, Steele remerged from the criminal underworld as one of the four original members of the <b>PAYDAY</b> crew.</p>
+            
         </div>
     </div>
     
