--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <li>
                         <ul>Robbery of First World Bank</ul>
                         <ul>Prison Break</ul>
-                        <ul>Fraudulent Acess of IRS Financial Servers</ul>
+                        <ul>Fraudulent Access of IRS Financial Servers</ul>
                         <ul>Robbery of Garnet Group's Personal Fortune</ul>
                         <ul>Manufacture of Conterfeit Currency</ul>
                     </li>
